# HAR_EXTRACTOR_AGENT

./: .env.example  APPROACH.md  QUALITY.md  README.md  pyproject.toml
agent/: __main__.py  cli.py  har.py  llm.py  loop.py  prompts.py  sandbox.py  tools.py  tracer.py  verify.py
logs/: chatgpt.json  claude.json
seed/: claude.har  ground_truth.json
traces/: chatgpt_00.json  claude_00.json
