[project]
name = "thc-har-agent"
version = "0.1.0"
description = "Agentic HAR-to-conversation-log generator that emits standalone extractors."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
